# create-bitcoin-transaction

./: Cargo.toml  README.md  RESOURCES.md  msg-legacy  msg-segwit  priv-legacy.hex  priv-legacy.pem  priv-segwit.hex  priv-segwit.pem  priv-wrapped.hex  priv-wrapped.pem
examples/: example.rs
src/: legacy_transaction.rs  lib.rs  main.rs  segwit_transaction.rs  types.rs  utils.rs
