[package]
name = "create-bitcoin-transaction"
version = "0.1.1"
edition = "2021"
description = "Create and sign bitcoin transactions"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-utilities = "0.1.3"
bitcoin = "0.29.1"
bitcoin-hd-keys = "=0.1.18"
sha2 = "=0.10.5"
bitcoin-address = "=0.1.4"
bitcoin-utils= "=0.1.1"
