[package]
name = "create-bitcoin-transaction"
version = "0.1.2"
edition = "2021"
description = "Create and sign bitcoin transactions"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-utilities = "0.1.3"
bitcoin = {version = "=0.29.1", features = ["rand", "std", "secp-recovery"]}
bitcoin-hd-keys = "=0.1.21"
sha2 = "=0.10.5"
bitcoin-address = "=0.1.5"
bitcoin-utils= "=0.1.3"
